# merkle_fileserver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
certs/: cert.pem  key.pem
demo_certs/: cert.pem  key.pem
src/: main.rs
src/client/: client.rs  mod.rs  routes.rs
src/fileserver/: fs.rs  mod.rs  routes.rs
src/fileserver/auth/: login.rs
src/merkletree/: tree.rs
static/: download.html  hash.html  list.html  login.html  upload.html  verify.html
