[package]
name = "merkle_fileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
futures = "0.3.30"
blake3 = "1.5.4"
base64 = "0.22.1"
hex = "0.4.3"
tokio-util = {version = "0.7.12", features =["io"]}
anyhow = "1.0.87"
sled = "0.34.7"
regex = "1.10.6"